# Data_transform

./: .gitignore  Pipfile  converting_types.ipynb  converting_types.py  converting_types_salário.ipynb  doing_a_complete_cycle.ipynb  doing_a_full_cycle.ipynb  env.txt  explicando_services.txt  teste_sqlite3.py  teste_sqlite3_csv_file.py  testing_stuff.ipynb  visualizing_data_csv.ipynb
Data_Transform/data_transform/: criando_fake_data.py  interface.py  services.py  services_old.py  testar_tipos_dados.py
Data_Transform/streamlit_page/: streamlit_page.py
Data_transform/: chatGPT_do_projeto.txt  dados_fake.csv  teste.py
Data_transform/Data_Transform/: pyproject.toml
Data_transform/Data_Transform/data_transform/: criando_fake_data.py  services.py  testar_tipos_dados.py
lixo/é_lixo/é_lixo_mesmo/sério/códigos_teste/: chatGPT_do_projeto.txt  converting_types.ipynb  converting_types_salário.ipynb  código_antigo.py  código_atual.py  código_interface_antigo.py  código_interface_atual.py  doing_a complete_cycle.py  explicando_services.txt  ideia da aplicação.txt  teste.py  teste_sqlite3_csv_file.py  testing_new_services.ipynb  testing_stuff.ipynb  visualizing_data_csv.ipynb
lixo/é_lixo/é_lixo_mesmo/sério/códigos_teste/data_transform_old/: services.py  testar_tipos_dados.py
