[tool.poetry]
name = "data-transform"
version = "0.1.0"
description = ""
authors = ["Rodrigo Silva <rodrigo.92.srb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
